cleaned things up a little bit, tried using vue reactive stuff but it just got weird

--- a/src/popup.html
+++ b/src/popup.html
@@ -13,6 +13,9 @@
     import Popup from "./pages/Popup.vue";
     import { createApp } from "vue";
 
-    createApp(Popup).mount("body");
+    const app = createApp(Popup)
+    app.config.unwrapInjectedRef = true;
+    app.mount("body");
+    
   </script>
 </html>
